--- a/day7/pytest.ini
+++ b/day7/pytest.ini
@@ -1,6 +1,5 @@
 [pytest]
-;--html=./report.html
-addopts = -s
+addopts = -s --alluredir report
 testpaths = ./
 python_files = test_*.py
 python_classes = Test_*
